<resources>
    <string name="app_name">KYUSACCO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutus">About Us</string>
    <string name="products_and_services">Products and Services</string>
    <string name="about_us">About Us</string>
    <string name="loan_products">Loan products</string>
    <string name="events">Events</string>
    <string name="productsand_services">Products And Services</string>
</resources>