<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_aboutusFragment"
            android:icon="@drawable/ic_baseline_aboutus_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_productAndServicesFragment"
            android:icon="@drawable/ic_baseline_products_24"
            android:title="@string/products_and_services" />
        <item
            android:id="@+id/nav_loanProductsFragment"
            android:icon="@drawable/ic_baseline_loan_24"
            android:title="@string/loan_products" />
        <item
            android:id="@+id/nav_eventsFragment"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/events" />
    </group>
</menu>